--- a/site/public/index.html
+++ b/site/public/index.html
@@ -53,7 +53,7 @@
 
 
         <div id="main-footer">
-            <h4 class>Inspired by 
+            <h4 class>Inspired by <a src="https://twitter.com/isisAnchalee">@IsisAnchalee</a></h4>
         </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
