git repos are weird

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -21,7 +21,8 @@
                 get: 'tagged',
                 tagName: 'iLookLikeAnEngineer',
                 clientId: 'd7c1e53a899547029f95b88ddff0c3c0',
-                accessToken: '24019934.d7c1e53.a71d4b66bbd24e0f9d70dec44659be02'
+                accessToken: '24019934.d7c1e53.a71d4b66bbd24e0f9d70dec44659be02',
+                limit: 45
             });
             feed.run();
         </script>
