--- a/site/public/index.html
+++ b/site/public/index.html
@@ -36,8 +36,15 @@
 
         <!-- Add your site or application content here -->
 
-        <div id="main-header"
+        <div id="main-header">
             <div class="header">#iLookLikeAnEngineer</div>
+        </div>
+
+        <div class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="https://medium.com/the-coffeelicious/you-may-have-seen-my-face-on-bart-8b9561003e0f">Read the Story</a></li>
+                <li class="nav-item"><a href="https://www.indiegogo.com/projects/let-s-put-up-an-ilooklikeanengineer-billboard#/story">Support on Indiegogo</a></li>
+            </ul>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -45,16 +52,18 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <h2>Shared on Instagram:</h2>
-        <div id="instafeed"></div>
-
-        <h2>Shared on Twitter:</h2>
-        <div id="tweets"></div>
-
+        <div class="instagram">
+            <h2>Shared on Instagram:</h2>
+            <div id="instafeed"></div>
+        </div>
+        <div class="twitter">
+            <h2>Shared on Twitter:</h2>
+            <div id="tweets"></div>
+        </div>
 
 
         <div id="main-footer">
-            <h4 class>Inspired by <a src="https://twitter.com/isisAnchalee">@IsisAnchalee</a></h4>
+            <h4 class="footer">Inspired by <a src="https://twitter.com/isisAnchalee">@IsisAnchalee</a></h4>
         </div>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
